Rosario Student Information System - CHANGES

Changes in 2.8.25
-----------------
- Fix JS error related to jqPlot loading: wrap JS code inside 500ms timeout in *Breakdown.php

Changes in 2.8.24
-----------------
- Fix SQL error when saving Parent Course Period in Courses.php
- Improve French translations
- Fix 1 option sub-menu height when mouse over Module in stylesheet.css
- Correct English default Help text in Help_en.php
- More explicit Assignment Type deletion Prompt message in Assignments.php
- Fix _delTree() function name typo in Modules.inc.php & Plugins.inc.php
- Create ReferralLog functions for reuse in Discipline/includes/ReferralLog.fnc.php
- Update PDFStart() & PDFStop() functions to enable Save PDF mode in PDF.php
- Add PHPMailer 5.2.14 class (email creation & (SMTP) transport) in classes/PHPMailer/
- Zap programs which are not allowed in Help.php
- Create ReportCards functions for reuse in Grades/includes/ReportCards.fnc.php
- Fix SQL bug MENU_ITEM not null in MenuItems.php
- PDF Save: unique filename in PDF.php

Changes in 2.8.23
-----------------
- Go button display when no Edit Allowed in Calendar.php
- Format Events List descriptions in Calendar.php
- Unset REQUEST students var in session after update in Student.php
- Various corrections for French translation
- Use AJAX after browser history instead of reloading page in warehouse.js
- Only show Block on Calendar Day to non admins if set

Changes in 2.8.22
-----------------
- Fix PHP Warning division by 0 in GradebookBreakdown.php
- Fix Default Points not required in Assignments.php

Changes in 2.8.21
-----------------
- Add Grade Scale default value in EditReportCardGrades.php
- Fix PHP error Invalid argument supplied for foreach() in Courses.php
- Fix spinner image reference in Scheduler.php
- Fixes: Dates not required & Points can be 0 in Assignments.php
- Correct Students Contact query: only if Custody / Emergency checked in GetStuList.fnc.php