@@ -3,6 +3,7 @@ Rosario Student Information System - CHANGES
 Changes in 2.8.25
 -----------------
 - Fix JS error related to jqPlot loading: wrap JS code inside 500ms timeout in *Breakdown.php
+- Prepare for State Reports module: Save Report bottom button & modname exception
 
 Changes in 2.8.24
 -----------------
